<resources>
    <string name="app_name">QuizApp</string>
    <string name="get_started_button">Get started</string>
    <string name="choose_contact_button">Choose contact</string>
    <string name="name_input_placeholder">Your name</string>
    <string name="login_welcome">Hello there, Welcome Back!</string>
    <string name="login_signin">Sign In to continue</string>
    <string name="alert_message">Enter a new password!</string>
    <string name="positive_alert_button">Yes</string>
    <string name="negative_alert_button">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try Again</string>
    <string name="home_item">Home</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="profile">Profile</string>
    <string name="list_of_questions">List of Questions</string>
    <string name="new_question">New question</string>
    <string name="test_your_skills">Test your skills</string>
    <string name="read_questions">Read questions</string>
    <string name="create_question">Create question</string>
    <string name="enjoy_the_quiz_app_where_you_can">Enjoy the quiz app, where you can:</string>
    <string name="player_name">Player name:</string>
    <string name="high_score">High score:</string>
    <string name="unknown">-</string>
    <string name="unknown_points">- points</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="answer">Answer</string>
    <string name="question_placeholder">Question placeholder</string>
    <string name="answers">Answers</string>
    <string name="add_question">Add question</string>
    <string name="single_answer">Single answer</string>
    <string name="details">Details</string>
    <string name="delete">delete</string>
</resources>