<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_fragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/home_item"
        android:icon="@drawable/home_icon"/>
    <item
        android:id="@+id/quiz_fragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/quiz_time"
        android:icon="@drawable/quiz_icon"/>
    <item
        android:id="@+id/profile_fragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/profile"
        android:icon="@drawable/account_icon"/>
    <item
        android:id="@+id/list_fragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/list_of_questions"
        android:icon="@drawable/list_icon"/>
    <item
        android:id="@+id/new_question_fragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/new_question"
        android:icon="@drawable/add_icon"/>
</menu>