<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/player_name"
        android:background="@drawable/edit_icon"
        android:layout_marginRight="40dp"/>

    <TextView
        android:id="@+id/player_name"
        android:text="@string/player_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/high_score"
        android:text="@string/high_score"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/player_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp" />

    <TextView
        android:text="@string/unknown"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintLeft_toRightOf="@id/player_name"
        android:layout_marginStart="30dp" />

    <TextView
        android:text="@string/unknown_points"
        android:id="@+id/score"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/player_name"
        app:layout_constraintLeft_toRightOf="@id/high_score"
        android:layout_marginStart="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>