<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:id="@+id/list_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/single_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_answer"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/list_question" />

            <TextView
                android:id="@+id/first_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/single_answer" />

            <Button
                android:id="@+id/detail_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_answer"
                android:layout_marginTop="20dp"
                android:text="@string/details" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/detail_button"
                app:layout_constraintTop_toBottomOf="@id/first_answer"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/delete"
                android:layout_marginStart="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>